# linux-wallpaperengine-gui

./: Cargo.toml  README.md
src/: app.rs  config.rs  displays.rs  gui.rs  ipc.rs  main.rs  theme.rs  tray.rs  wallpaper.rs
