[package]
name = "linux-wallpaperengine-gui"
version = "0.1.0"
edition = "2024"
description = "GUI wallpaper manager for linux-wallpaper-engine"

[dependencies]
iced = { version = "0.14", features = ["image", "wgpu", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
tokio = { version = "1", features = ["process", "fs"] }
