[package]
name = "linux-wallpaperengine-gui"
version = "0.2.0"
edition = "2024"
description = "GUI wallpaper manager for linux-wallpaper-engine"

[dependencies]
iced = { version = "0.14", features = ["image", "wgpu", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
dirs = "6"
tokio = { version = "1", features = ["process", "fs", "net", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
ksni = "0.3"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11"
